удалил confirm delete